fix: updating CSS variables being used in Action Blocks, Buttons, Chips, and Icons -- addresses Edge 15 & 16 quirks w/ Current Color; temp CSS button theme hack also added.

--- a/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.scss
+++ b/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.scss
@@ -29,7 +29,7 @@ $bolt-action-block-item-max-width: 20ch;
 
 $bolt-action-blocks-border-width: $bolt-border-width;
 $bolt-action-blocks-border-style: $bolt-border-style;
-$bolt-action-blocks-border-color: var(--bolt-theme-card-border, var(--bolt-theme-border, currentColor));
+$bolt-action-blocks-border-color: var(--bolt-theme-card-border, var(--bolt-theme-border, inherit));
 
 $bolt-action-block-background: bolt-color(indigo, light);
 
