--- a/src/_patterns/02-components/bolt-icon/src/icon.scss
+++ b/src/_patterns/02-components/bolt-icon/src/icon.scss
@@ -2,13 +2,13 @@ bolt-icon {
   display: inline-block;
   display: inline-flex;
   color: currentColor;
-  color: var(--bolt-color-icon, currentColor);
+  color: var(--bolt-color-icon, inherit);
 }
 
 :host {
   display: inline-block;
   color: currentColor;
-  color: var(--bolt-color-icon, currentColor);
+  color: var(--bolt-color-icon, inherit);
   vertical-align: middle;
 }
 
