--- a/src/_patterns/04-pages/d8-homepage/d8-homepage-video-test.twig
+++ b/src/_patterns/04-pages/d8-homepage/d8-homepage-video-test.twig
@@ -3,6 +3,15 @@
 {% block main_content %}
 
   {% set feature_band_content %}
+    {% include "@bolt/button.twig" with {
+      attributes: {
+        class: [
+          "_c-bolt-button--theme-override"
+        ]
+      },
+      text: "Contact Us"
+    } %}
+    
     <bolt-ratio>
       <div class="c-brightcove-video u-bolt-width-1/1 o-bolt-ratio" style="padding-bottom: 56.25%;">
         {# <video data-video-id="4268703476001" data-account="1900410236" data-player="SklWHdrCAZ" data-embed="default" data-application-id
