WIP: stashing latest

--- a/src/_patterns/02-components/bolt-button/src/button.scss
+++ b/src/_patterns/02-components/bolt-button/src/button.scss
@@ -7,6 +7,10 @@
 // @import '@bolt/tools-font-weight';
 // @import '@bolt/tools-spacing';
 // @import '@bolt/tools-no-select';
+$bolt-export-data: false;
+
+@import '@bolt/settings-all';
+@import '@bolt/tools-all';
 
 
 $bolt-color-button-text: bolt-color(white);
