--- a/src/_patterns/02-components/bolt-blockquote/demo/theming/blockquote--theme-demo.twig
+++ b/src/_patterns/02-components/bolt-blockquote/demo/theming/blockquote--theme-demo.twig
@@ -2,9 +2,10 @@
 {% block demo_content %}
   {% include "@bolt/blockquote.twig" with {
     "theme": theme,
-    "size": "xlarge",
-    "border": "horizontal",
+    "size": "xxlarge",
     "alignItems": "center",
+    "border": "horizontal",
+    "fullBleed": true,
     "logo": {
       "src": "/images/sample/PayPal-logo.svg"
     },
