docs: commenting on twig and scss files

--- a/src/_patterns/02-components/bolt-blockquote/src/blockquote.twig
+++ b/src/_patterns/02-components/bolt-blockquote/src/blockquote.twig
@@ -14,8 +14,7 @@
 
     // Logo is optional.
     "logo": {
-      "src": "/images/sample/PayPal-logo.svg",
-      "alt": "Alt Text"
+      "src": "/images/sample/PayPal-logo.svg"
     },
 
     // Content is required.
@@ -24,8 +23,7 @@
     // Author is optional.
     "author": {
       "image": {
-        "src": "/images/placeholders/500x500.jpg",
-        "alt": "Alt Text"
+        "src": "/images/placeholders/500x500.jpg"
       },
       "name": "Michelangelo di Lodovico Buonarroti Simoni",
       "title": "Renaissance Artist"
