--- a/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
+++ b/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
@@ -13,14 +13,26 @@
 // Sample Usage
 // <bolt-blockquote bolt-component="">
 //   <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical">
+//     <div class="c-bolt-blockquote__logo">
+//       <bolt-logo>
+//         ...
+//       </bolt-logo>
+//     </div>
 //     <div class="c-bolt-blockquote__quote">
-//       <div class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--large">
+//       <div class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xlarge">
 //         <span class="c-bolt-text__text">
 //           <p>The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.</p>
 //         </span>
 //       </div>
 //     </div>
 //     <footer class="c-bolt-blockquote__footer">
+//       <div class="c-bolt-blockquote__footer-item">
+//         <div class="c-bolt-blockquote__image">
+//           <bolt-image>
+//             ...
+//           </bolt-image>
+//         </div>
+//       </div>
 //       <div class="c-bolt-blockquote__footer-item">
 //         <cite class="c-bolt-text c-bolt-text--bold c-bolt-text--normal c-bolt-text--xsmall">
 //           <span class="c-bolt-text__text">
