--- a/src/_patterns/01-core/06-themes/general/themes-dark/_themes.dark.scss
+++ b/src/_patterns/01-core/06-themes/general/themes-dark/_themes.dark.scss
@@ -12,6 +12,8 @@ $bolt-theme-dark-link:         $bolt-theme-dark-primary !default;
 $bolt-theme-dark-heading-link: $bolt-theme-dark-text !default;
 $bolt-theme-dark-border:       rgba($bolt-theme-dark-heading, $bolt-global-border-opacity);
 
+$bolt-theme-contrast-filter:   grayscale(100%) invert(100%) brightness(150%);
+
 .t-bolt-dark {
   $bolt-theme-background:             $bolt-theme-dark-background;
   $bolt-theme-primary:                $bolt-theme-dark-primary;
@@ -50,7 +52,7 @@ $bolt-theme-dark-border:       rgba($bolt-theme-dark-heading, $bolt-global-borde
   $bolt-theme-primary-background-focus: mix($bolt-global-button-hover-color, $bolt-theme-primary-background-default, $bolt-global-button-hover-mix);
   $bolt-theme-primary-text-focus:       bolt-text-contrast($bolt-theme-primary-background-focus);
   $bolt-theme-primary-border-focus:     $bolt-theme-primary-background-focus;
-  
+
 
 
   --bolt-theme-background:   $bolt-theme-background;
@@ -74,7 +76,7 @@ $bolt-theme-dark-border:       rgba($bolt-theme-dark-heading, $bolt-global-borde
   --bolt-theme-heading-link-active: $bolt-theme-heading-link-active;
   --bolt-theme-heading-link-visited: $bolt-theme-heading-link-visited;
 
-  
+
   --bolt-theme-primary-background-default: $bolt-theme-primary-background-default;
   --bolt-theme-primary-text-default:       $bolt-theme-primary-text-default;
   --bolt-theme-primary-border-default:     $bolt-theme-primary-border-default;
@@ -90,6 +92,8 @@ $bolt-theme-dark-border:       rgba($bolt-theme-dark-heading, $bolt-global-borde
   --bolt-theme-primary-background-focus: $bolt-theme-primary-background-focus;
   --bolt-theme-primary-text-focus:       $bolt-theme-primary-text-focus;
   --bolt-theme-primary-border-focus:     $bolt-theme-primary-border-focus;
+
+  --bolt-theme-contrast-filter: $bolt-theme-contrast-filter;
 
   background-color: $bolt-theme-background;
   color: $bolt-theme-text;
