--- a/src/_patterns/02-components/bolt-logo/src/logo.scss
+++ b/src/_patterns/02-components/bolt-logo/src/logo.scss
@@ -12,5 +12,5 @@ bolt-logo {
 }
 
 .c-bolt-logo--invert {
-  filter: grayscale(100%) invert(100%) brightness(150%);
+  filter: var(--bolt-theme-contrast-filter);
 }
