docs: blockquote documentation

--- a/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
+++ b/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
@@ -11,7 +11,7 @@
 \* ------------------------------------ */
 
 // Sample Usage
-// <bolt-blockquote bolt-component="">
+// <bolt-blockquote bolt-component>
 //   <blockquote class="c-bolt-blockquote c-bolt-blockquote--align-items-start c-bolt-blockquote--bordered-vertical">
 //     <div class="c-bolt-blockquote__logo">
 //       <bolt-logo>
