--- a/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
+++ b/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
@@ -19,7 +19,7 @@
 //       </bolt-logo>
 //     </div>
 //     <div class="c-bolt-blockquote__quote">
-//       <div class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xlarge">
+//       <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xlarge">
 //         <span class="c-bolt-text__text">
 //           <p>The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.</p>
 //         </span>
